# credit-risk-pipeline

./: .gitignore  README.md  pyproject.toml
cours_mlflows/notebooks_cours/: Etude_chat_GPT.ipynb  first_experiment.ipynb  logging-first-model.ipynb  ml_flow_binary_classification.ipynb  ml_flow_dagshub.ipynb  ml_flow_model_management.ipynb
docs/: home_credit_description.md  schema_mermaid_code.txt
notebooks/kaggle_raw/: copy_EDA_start-here-a-gentle-introduction.ipynb
