[project]
name = "projet-6-initiation-mlops"
version = "0.1.0"
description = "Scoring credit avec MLOps - Projet 6"
authors = [
    {name = "Fabrice Van Speybrock",email = "fabrice.vanspeybrock@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "xgboost (>=3.0.3,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "mlflow (>=3.2.0,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "missingno (>=0.5.2,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.5"
ipykernel = "^6.30.1"

